# src/app.ts
@@ -4,6 +4,7 @@ import swaggerUI from 'swagger-ui-express';
 import path from 'path';
 import YAML from 'yamljs';
 import { usersRouter } from './routes/users';
+import { groupsRouter } from './routes/groups';
 import { errorHandler } from './middleware/error-handler';
 
 const app = express();
@@ -14,6 +15,7 @@ app.use(express.json());
 
 app.use('/doc', swaggerUI.serve, swaggerUI.setup(swaggerDocument));
 app.use('/users', usersRouter);
+app.use('/groups', groupsRouter);
 
 app.use(errorHandler);
 
